fix overflow

--- a/src/assets/scss/blocks/_header.scss
+++ b/src/assets/scss/blocks/_header.scss
@@ -38,7 +38,7 @@ header {
     div {
         overflow: hidden;
         position: relative;
-        height: 4rem;
+        height: 5.5rem;
 
         li {
             font-weight: 600;
